# DevOps-Incident-Triage-Model

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.ko.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  gradio_app.py
data/demo/: incidents_showcase.jsonl
data/raw/: README.md  incidents_template.csv
data/sample/: README.md  incidents_synthetic.csv
docs/: architecture.md  branch_strategy.md  model_benchmarking.md  model_card.md  portfolio_evidence.md  portfolio_notes.md  rag-roadmap.md  real_data_ingestion.md  release-strategy.md  release_checklist.md  todo.md
docs/releases/: release-2026.05-classifier-core.md
docs/runbooks/: aws-iam-network.md  cicd.md  container-runtime.md  database.md  deployment-release.md  kubernetes.md  observability.md
docs/superpowers/plans/: 2026-04-09-demo-showcase.md  2026-05-07-ci-followup-and-next-priority.md
docs/superpowers/specs/: 2026-04-09-demo-showcase-design.md  2026-04-15-ci-hardening-design.md
reports/: demo_showcase.md  sample_predictions.jsonl
src/devops_incident_triage/: __init__.py  api.py  benchmark_models.py  config.py  data_prep.py  demo_showcase.py  evaluate.py  gradio_app.py  hf_publish.py  ingest_raw.py  labels.py  predict.py  train.py  triage_policy.py
tests/: test_api.py  test_benchmark_models.py  test_data_prep.py  test_demo_showcase.py  test_hf_publish.py  test_ingest_raw.py  test_labels.py  test_triage_policy.py  test_web_homepage.py
