[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-incident-triage-model"
version = "0.3.0"
description = "Portfolio-grade Hugging Face project for DevOps incident triage classification."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Donghyeon" }
]
dependencies = [
  "transformers>=4.40.0",
  "datasets>=2.19.0",
  "evaluate>=0.4.2",
  "huggingface_hub>=0.23.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "torch>=2.3.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "prometheus-client>=0.20.0",
]
peft = [
  "peft>=0.11.0",
]
viz = [
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
]
gradio = [
  "gradio>=4.36.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
ditri-data-prep = "devops_incident_triage.data_prep:main"
ditri-train = "devops_incident_triage.train:main"
ditri-eval = "devops_incident_triage.evaluate:main"
ditri-predict = "devops_incident_triage.predict:main"
ditri-publish = "devops_incident_triage.hf_publish:main"
ditri-api = "devops_incident_triage.api:main"
ditri-gradio = "devops_incident_triage.gradio_app:main"
ditri-ingest-raw = "devops_incident_triage.ingest_raw:main"
ditri-benchmark = "devops_incident_triage.benchmark_models:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
